Complete code until DecisionTree

--- a/hw2/hw2.ipynb
+++ b/hw2/hw2.ipynb
@@ -63,8 +63,8 @@
      "solution": false
     },
     "ExecuteTime": {
-     "end_time": "2025-05-06T10:52:29.657699Z",
-     "start_time": "2025-05-06T10:52:25.976401Z"
+     "end_time": "2025-05-06T12:18:48.415270Z",
+     "start_time": "2025-05-06T12:18:47.119348Z"
     }
    },
    "source": [
@@ -103,8 +103,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-06T10:52:41.294180Z",
-     "start_time": "2025-05-06T10:52:41.273762Z"
+     "end_time": "2025-05-06T12:18:48.435173Z",
+     "start_time": "2025-05-06T12:18:48.419838Z"
     }
    },
    "source": [
@@ -123,8 +123,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-06T10:52:56.578491Z",
-     "start_time": "2025-05-06T10:52:56.559012Z"
+     "end_time": "2025-05-06T12:18:48.623324Z",
+     "start_time": "2025-05-06T12:18:48.604884Z"
     }
    },
    "source": [
@@ -139,15 +139,15 @@
     {
      "data": {
       "text/plain": [
-       "[<__main__.Node at 0x1108b6d50>, <__main__.Node at 0x10bf2c140>]"
+       "[<__main__.Node at 0x114ebfe30>, <__main__.Node at 0x114ebffb0>]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -205,8 +205,8 @@
      "solution": false
     },
     "ExecuteTime": {
-     "end_time": "2025-05-06T10:53:14.005928Z",
-     "start_time": "2025-05-06T10:53:13.952715Z"
+     "end_time": "2025-05-06T12:18:48.683251Z",
+     "start_time": "2025-05-06T12:18:48.637682Z"
     }
    },
    "source": [
@@ -585,12 +585,12 @@
        "</div>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -603,15 +603,15 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-06T10:53:29.635200Z",
-     "start_time": "2025-05-06T10:53:29.609620Z"
+     "end_time": "2025-05-06T12:18:48.750756Z",
+     "start_time": "2025-05-06T12:18:48.729408Z"
     }
    },
    "source": [
     "data = data.dropna(axis=1)"
    ],
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -624,8 +624,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-06T10:54:36.021378Z",
-     "start_time": "2025-05-06T10:54:33.720534Z"
+     "end_time": "2025-05-06T12:18:50.356535Z",
+     "start_time": "2025-05-06T12:18:48.782256Z"
     }
    },
    "source": [
@@ -649,7 +649,7 @@
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -672,23 +672,23 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-06T11:05:42.242146Z",
-     "start_time": "2025-05-06T11:05:42.212359Z"
+     "end_time": "2025-05-06T12:18:50.408990Z",
+     "start_time": "2025-05-06T12:18:50.373327Z"
     }
    },
    "source": [
     "from hw2 import calc_gini, calc_entropy"
    ],
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 7
   },
   {
    "cell_type": "code",
    "metadata": {
     "scrolled": true,
     "ExecuteTime": {
-     "end_time": "2025-05-06T11:06:08.667316Z",
-     "start_time": "2025-05-06T11:06:08.644765Z"
+     "end_time": "2025-05-06T12:18:50.449286Z",
+     "start_time": "2025-05-06T12:18:50.426411Z"
     }
    },
    "source": [
@@ -735,7 +735,7 @@
      ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -818,22 +818,22 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-06T11:21:44.309753Z",
-     "start_time": "2025-05-06T11:21:44.287629Z"
+     "end_time": "2025-05-06T12:18:50.488801Z",
+     "start_time": "2025-05-06T12:18:50.466291Z"
     }
    },
    "source": [
     "from hw2 import DecisionNode"
    ],
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 9
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-06T11:21:44.728208Z",
-     "start_time": "2025-05-06T11:21:44.668364Z"
+     "end_time": "2025-05-06T12:18:50.569504Z",
+     "start_time": "2025-05-06T12:18:50.507511Z"
     }
    },
    "source": [
@@ -854,12 +854,12 @@
        "(np.float64(0.0199596578344422), np.float64(0.030727291723502415))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 16
+   "execution_count": 10
   },
   {
    "cell_type": "markdown",
@@ -884,18 +884,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-06T12:18:50.608323Z",
+     "start_time": "2025-05-06T12:18:50.587586Z"
+    }
+   },
    "source": [
     "from hw2 import DecisionTree"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 11
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-06T12:19:13.034522Z",
+     "start_time": "2025-05-06T12:18:50.645498Z"
+    }
+   },
    "source": [
     "##### Your tests here #####\n",
     "tree_gini = DecisionTree(data=X_train, impurity_func=calc_gini) # gini and goodness of split\n",
@@ -906,7 +914,9 @@
     "\n",
     "tree_entropy_gain_ratio = DecisionTree(data=X_train, impurity_func=calc_entropy, gain_ratio=True) # entropy and gain ratio\n",
     "tree_entropy_gain_ratio.build_tree()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -926,9 +936,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-06T12:19:13.112154Z",
+     "start_time": "2025-05-06T12:19:13.040575Z"
+    }
+   },
    "source": [
     "##### Your tests here #####\n",
     "\n",
@@ -936,7 +949,19 @@
     "print('entropy', tree_entropy.calc_accuracy(X_train), tree_entropy.calc_accuracy(X_validation))\n",
     "print('entropy gain ratio', tree_entropy_gain_ratio.calc_accuracy(X_train), \n",
     "      tree_entropy_gain_ratio.calc_accuracy(X_validation))"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gini 99.24503528639423 77.49876907927128\n",
+      "entropy 99.40915805022156 77.25258493353027\n",
+      "entropy gain ratio 99.63892991957984 78.53274249138356\n"
+     ]
+    }
+   ],
+   "execution_count": 13
   },
   {
    "cell_type": "markdown",
@@ -955,9 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "##### Your tests here #####\n",
     "from hw2 import depth_pruning\n",
@@ -967,7 +990,9 @@
     "plt.plot(range(1, 11), depth_validation_acc, label='Validation')\n",
     "plt.scatter(np.argmax(depth_validation_acc)+1, max(depth_validation_acc), c='r')\n",
     "plt.legend();"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -984,18 +1009,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "from hw2 import chi_pruning"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "##### Your tests here #####\n",
     "\n",
@@ -1006,7 +1029,9 @@
     "plt.plot(chi_depth_tuple, chi_validation_acc[::-1], label='Validation')\n",
     "plt.scatter(chi_depth_tuple[np.argmax(chi_validation_acc[::-1])], max(chi_validation_acc), c='r')\n",
     "plt.legend();"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -1019,13 +1044,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "tree_max_depth = None\n",
     "tree_chi = None"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -1042,23 +1067,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "from hw2 import count_nodes"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "##### Your tests here #####\n",
     "print(count_nodes(tree_max_depth.root))\n",
     "print(count_nodes(tree_entropy_gain_ratio.root))"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -1083,9 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "def print_tree(node, depth=0, parent_feature='ROOT', feature_val='ROOT'):\n",
     "    '''\n",
@@ -1112,14 +1135,16 @@
     "            classes_count[l] = c\n",
     "        print('{}[X{}={}, leaf]: [{}], Depth: {}'.format(depth*'  ', parent_feature, feature_val,\n",
     "                                                         classes_count, node.depth))"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": null
   }
  ],
  "metadata": {
