final version - minor fix

--- a/hw2/hw2.ipynb
+++ b/hw2/hw2.ipynb
@@ -63,8 +63,8 @@
      "solution": false
     },
     "ExecuteTime": {
-     "end_time": "2025-05-12T07:56:10.895677Z",
-     "start_time": "2025-05-12T07:56:10.043337Z"
+     "end_time": "2025-05-12T09:55:55.283Z",
+     "start_time": "2025-05-12T09:55:54.007129Z"
     }
    },
    "source": [
@@ -103,8 +103,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-12T07:56:11.265185Z",
-     "start_time": "2025-05-12T07:56:11.061522Z"
+     "end_time": "2025-05-12T09:55:55.618988Z",
+     "start_time": "2025-05-12T09:55:55.424890Z"
     }
    },
    "source": [
@@ -123,8 +123,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-12T07:56:11.299283Z",
-     "start_time": "2025-05-12T07:56:11.279009Z"
+     "end_time": "2025-05-12T09:55:55.655952Z",
+     "start_time": "2025-05-12T09:55:55.635222Z"
     }
    },
    "source": [
@@ -139,7 +139,7 @@
     {
      "data": {
       "text/plain": [
-       "[<__main__.Node at 0x111359bb0>, <__main__.Node at 0x11175d7f0>]"
+       "[<__main__.Node at 0x10e897590>, <__main__.Node at 0x10e897620>]"
       ]
      },
      "execution_count": 3,
@@ -205,8 +205,8 @@
      "solution": false
     },
     "ExecuteTime": {
-     "end_time": "2025-05-12T07:56:11.463519Z",
-     "start_time": "2025-05-12T07:56:11.332970Z"
+     "end_time": "2025-05-12T09:55:55.839026Z",
+     "start_time": "2025-05-12T09:55:55.690866Z"
     }
    },
    "source": [
@@ -603,8 +603,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-12T07:56:11.546699Z",
-     "start_time": "2025-05-12T07:56:11.521262Z"
+     "end_time": "2025-05-12T09:55:55.938541Z",
+     "start_time": "2025-05-12T09:55:55.911001Z"
     }
    },
    "source": [
@@ -616,8 +616,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-12T07:56:11.623305Z",
-     "start_time": "2025-05-12T07:56:11.604199Z"
+     "end_time": "2025-05-12T09:55:56.038497Z",
+     "start_time": "2025-05-12T09:55:56.006045Z"
     }
    },
    "cell_type": "code",
@@ -650,8 +650,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-12T07:56:12.793601Z",
-     "start_time": "2025-05-12T07:56:11.682759Z"
+     "end_time": "2025-05-12T09:55:57.900571Z",
+     "start_time": "2025-05-12T09:55:56.199349Z"
     }
    },
    "source": [
@@ -698,8 +698,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-12T07:56:12.836236Z",
-     "start_time": "2025-05-12T07:56:12.812221Z"
+     "end_time": "2025-05-12T09:55:57.965457Z",
+     "start_time": "2025-05-12T09:55:57.928091Z"
     }
    },
    "source": [
@@ -713,8 +713,8 @@
    "metadata": {
     "scrolled": true,
     "ExecuteTime": {
-     "end_time": "2025-05-12T07:56:12.875428Z",
-     "start_time": "2025-05-12T07:56:12.854135Z"
+     "end_time": "2025-05-12T09:55:58.017660Z",
+     "start_time": "2025-05-12T09:55:57.988987Z"
     }
    },
    "source": [
@@ -844,8 +844,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-12T07:56:12.912905Z",
-     "start_time": "2025-05-12T07:56:12.893543Z"
+     "end_time": "2025-05-12T09:55:58.085956Z",
+     "start_time": "2025-05-12T09:55:58.064222Z"
     }
    },
    "source": [
@@ -858,8 +858,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-12T07:56:12.992688Z",
-     "start_time": "2025-05-12T07:56:12.934647Z"
+     "end_time": "2025-05-12T09:55:58.165430Z",
+     "start_time": "2025-05-12T09:55:58.105270Z"
     }
    },
    "source": [
@@ -912,8 +912,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-12T07:56:13.033615Z",
-     "start_time": "2025-05-12T07:56:13.014798Z"
+     "end_time": "2025-05-12T09:55:58.206613Z",
+     "start_time": "2025-05-12T09:55:58.187765Z"
     }
    },
    "source": [
@@ -926,8 +926,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-12T07:56:35.319114Z",
-     "start_time": "2025-05-12T07:56:13.054243Z"
+     "end_time": "2025-05-12T09:56:19.560035Z",
+     "start_time": "2025-05-12T09:55:58.232940Z"
     }
    },
    "source": [
@@ -964,8 +964,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-12T07:56:35.407220Z",
-     "start_time": "2025-05-12T07:56:35.339959Z"
+     "end_time": "2025-05-12T09:56:19.648714Z",
+     "start_time": "2025-05-12T09:56:19.583164Z"
     }
    },
    "source": [
@@ -1008,8 +1008,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-12T07:56:59.801123Z",
-     "start_time": "2025-05-12T07:56:35.428023Z"
+     "end_time": "2025-05-12T09:56:40.405456Z",
+     "start_time": "2025-05-12T09:56:19.670779Z"
     }
    },
    "source": [
@@ -1053,8 +1053,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-12T07:56:59.903124Z",
-     "start_time": "2025-05-12T07:56:59.870032Z"
+     "end_time": "2025-05-12T09:56:40.454892Z",
+     "start_time": "2025-05-12T09:56:40.430657Z"
     }
    },
    "source": [
@@ -1067,8 +1067,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-12T07:57:17.386542Z",
-     "start_time": "2025-05-12T07:56:59.935542Z"
+     "end_time": "2025-05-12T09:56:58.777589Z",
+     "start_time": "2025-05-12T09:56:40.490864Z"
     }
    },
    "source": [
@@ -1106,11 +1106,23 @@
    ]
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-12T09:56:58.825058Z",
+     "start_time": "2025-05-12T09:56:58.802081Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "from hw2 import count_nodes",
+   "outputs": [],
+   "execution_count": 18
+  },
+  {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-12T08:03:45.507414Z",
-     "start_time": "2025-05-12T08:03:43.929974Z"
+     "end_time": "2025-05-12T09:57:00.456079Z",
+     "start_time": "2025-05-12T09:56:58.852100Z"
     }
    },
    "source": [
@@ -1138,6 +1150,11 @@
     ")\n",
     "tree_chi.build_tree()\n",
     "\n",
+    "# --- count nodes ---\n",
+    "nodes_max_depth   = count_nodes(tree_max_depth.root)\n",
+    "nodes_chi         = count_nodes(tree_chi.root)\n",
+    "\n",
+    "\n",
     "print(f\"best depth = {best_depth},  nodes = {nodes_max_depth}\")\n",
     "print(f\"best χ²   = {best_chi},  nodes = {nodes_chi}\")\n"
    ],
@@ -1151,7 +1168,7 @@
      ]
     }
    ],
-   "execution_count": 23
+   "execution_count": 19
   },
   {
    "cell_type": "markdown",
@@ -1167,18 +1184,11 @@
    ]
   },
   {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "from hw2 import count_nodes"
-  },
-  {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-12T08:03:49.974041Z",
-     "start_time": "2025-05-12T08:03:49.951555Z"
+     "end_time": "2025-05-12T09:57:00.499917Z",
+     "start_time": "2025-05-12T09:57:00.479527Z"
     }
    },
    "source": [
@@ -1196,7 +1206,7 @@
      ]
     }
    ],
-   "execution_count": 25
+   "execution_count": 20
   },
   {
    "cell_type": "markdown",
@@ -1223,8 +1233,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-12T08:03:55.064965Z",
-     "start_time": "2025-05-12T08:03:55.042837Z"
+     "end_time": "2025-05-12T09:57:00.556579Z",
+     "start_time": "2025-05-12T09:57:00.531600Z"
     }
    },
    "source": [
@@ -1255,7 +1265,7 @@
     "                                                         classes_count, node.depth))"
    ],
    "outputs": [],
-   "execution_count": 26
+   "execution_count": 21
   }
  ],
  "metadata": {
